# ocaml-libdbf

./: CHANGES  README.md  dbase4.opam  dbf.opam  dune-project
doc/: dune  index.mld
lib/: base.ml  base.mli  data.ml  data.mli  dune  memo.ml  memo.mli
test/: dune  test_base.ml  test_base2.ml  test_memo.ml  test_memo2.ml  x_util.ml
test/samples/: test.dbf  test02.dbf  test03.dbf  test04.dbf  test05.dbf
test/samples/memo/: memo.dbt  test_02.dbf  test_02.dbt
